akhir commit(fih fach zedt DATABASE)