@@ -204,6 +204,25 @@
             <version>${openjfx.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.13.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
+        </dependency>
 
 
     </dependencies>
@@ -250,14 +269,47 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.6.1</version>
         </plugin>
-          <plugin>
-              <groupId>org.openjfx</groupId>
-              <artifactId>javafx-maven-plugin</artifactId>
-              <version>0.0.8</version>
-              <configuration>
-                  <mainClass>org.example.Main</mainClass>
-              </configuration>
-          </plugin>
+        <plugin>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.8</version>
+          <configuration>
+              <mainClass>org.example.Main</mainClass>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>3.1.0</version>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>java</goal>
+                  </goals>
+              </execution>
+          </executions>
+          <configuration>
+              <mainClass>org.example.App</mainClass>
+              <arguments>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.lang=ALL-UNNAMED</argument>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.lang.invoke=ALL-UNNAMED</argument>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.lang.reflect=ALL-UNNAMED</argument>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.io=ALL-UNNAMED</argument>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.security=ALL-UNNAMED</argument>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.util=ALL-UNNAMED</argument>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.util.concurrent=ALL-UNNAMED</argument>
+                  <argument>--add-opens</argument>
+                  <argument>java.base/java.math=ALL-UNNAMED</argument>
+              </arguments>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
